--- a/experience_bali.html
+++ b/experience_bali.html
@@ -14,7 +14,6 @@
 </head>
 <body>
 	<!-- HEADER -->
-
 	<header class="clearfix">
 		<div id='header-main' class='col-t-12 col-s-12 col-12'>
 			<img class='col-s-2' id='show-menu' src="images/show-menu.png" alt="display menu">
@@ -74,7 +73,7 @@
 	<!-- END HEADER -->
 
 	<!-- POP UP -->
-	<div id="main">
+	<div id="main"> <!-- the pop-ups that only appear in the non-registered version -->
 		<!-- SIGN UP -->
 		<article class="popup col-s-7" id="sign-popup">
 			<div class="title-exit">
@@ -225,8 +224,9 @@
 		</article>
 		<!-- END PLEASE LOG IN -->
 	</div>
+
 	<!-- LOG OUT -->
-	<div id="registered">
+	<div id="registered"> <!-- the pop-ups that only appear in the registered version -->
 		<article class="popup col-s-6" id="logout-popup">
 			<div class="title-exit">
 				<h3>Log out</h3>
@@ -241,10 +241,9 @@
 			</div>
 		</article>
 	</div>
-	<!--  END POP UPS -->
+	<!--  END LOG OUT -->
 
 	<!--  MESSAGES -->
-
 	<article class="popup col-s-11" id="messages-popup">
 		<div class="title-exit">
 			<h3>Messaging</h3>
@@ -252,45 +251,46 @@
 		</div>
 		<div id="inside-messages">
 			<div id="your-chats" class="col-s-11 col-t-11 col-3">
-	      <h3>Your chats</h3>
-	      <div id="chats" class="">
-	        <article class="chat-person" id="default-person">
-	          <p class="date-chat" id="date-chat">Default date</p>
-	          <img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
-	          <h4 class="name-chat" id="name-chat">Defaul name</h4>
-	        </article>
-	        <article class="chat-person" id="selected-chat">
-	          <p class="date-chat" id="date-chat-2">Default date</p>
-	          <img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
-	          <h4 class="name-chat" id="name-chat-2">Defaul name</h4>
-	        </article>
-	      </div>
-	    </div>
-	    <div id="chat" class="col-s-11 col-t-11 col-8">
-	      <div id="title-chat">
-	        <h3 id="main-chat">Default name</h3>
-	        <img id="profile-chat" src="images/default_pfp.png" alt="default picture">
-	      </div>
-	      <hr id="horizontal">
-	      <div id="in-messages">
-	        <div class="received-message message col-s-8 col-t-8 col-6" id="default-received">
-	          <p class="message-date-small" id="message-date">Default date</p>
-	          <p class="message-text">Default Message</p>
-	        </div>
-	        <div class="sent-message message col-s-8 col-t-8 col-6" id="default-sent">
-	          <p class="message-date-small" id="message-date-2">Default date</p>
-	          <p class="message-text">Default Message</p>
-	        </div>
-	      </div>
-	      <div class="col-s-9 comment-frm">
-		  	<label for="message">Enter your message:</label>
-	        <input id="message" type="text" class='comment-input col-s-10 col-t-11 col-11' name="message">
-	        <img class="send-btn" src="images/send.png" alt="send message">
-	      </div>
-	    </div>
+				<h3>Your chats</h3>
+				<div id="chats" class="">
+					<article class="chat-person" id="default-person">
+						<p class="date-chat" id="date-chat">Default date</p>
+						<img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
+						<h4 class="name-chat" id="name-chat">Defaul name</h4>
+					</article>
+					<article class="chat-person" id="selected-chat">
+						<p class="date-chat" id="date-chat-2">Default date</p>
+						<img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
+						<h4 class="name-chat" id="name-chat-2">Defaul name</h4>
+					</article>
+				</div>
+			</div>
+			<div id="chat" class="col-s-11 col-t-11 col-8">
+				<div id="title-chat">
+					<h3 id="main-chat">Default name</h3>
+					<img id="profile-chat" src="images/default_pfp.png" alt="default picture">
+				</div>
+				<hr id="horizontal">
+				<div id="in-messages">
+					<div class="received-message message col-s-8 col-t-8 col-6" id="default-received">
+						<p class="message-date-small" id="message-date">Default date</p>
+						<p class="message-text">Default Message</p>
+					</div>
+					<div class="sent-message message col-s-8 col-t-8 col-6" id="default-sent">
+						<p class="message-date-small" id="message-date-2">Default date</p>
+						<p class="message-text">Default Message</p>
+					</div>
+				</div>
+				<div class="col-s-9 comment-frm">
+					<label for="message">Enter your message:</label>
+					<input id="message" type="text" class='comment-input col-s-10 col-t-11 col-11' name="message">
+					<img class="send-btn" src="images/send.png" alt="send message">
+				</div>
+			</div>
 		</div>
 	</article>
 	<!-- END MESSAGES -->
+
 	<!-- POP UP COMMENTS -->
 	<section id='pop-up-comments' class="col-s-11">
 		<button class="close-btn">x</button>
@@ -299,13 +299,13 @@
 			<article class="comment col-s-11">
 				<p class="col-s-6">Name</p>
 				<h3 class="col-s-6">@user1</h3>
-				<p class="col-s-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p class="col-s-12">Very beautiful.</p>
 			</article>
 			<img class="separator col-s-11" src="images/separator_comments.png" alt="separator for the comments">
 			<article class="comment col-s-11">
 				<p class="col-s-6">Name</p>
 				<h3 class="col-s-6">@user1</h3>
-				<p class="col-s-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p class="col-s-12">Marvellous experiences.</p>
 			</article>
 		</div>
 		<div class="comment-frm col-s-9">
@@ -314,6 +314,8 @@
 			<img class="send-btn" src="images/send.png" alt="send comment">
 		</div>
 	</section>
+	<!-- END POP UP COMMENTS -->
+
 	<!-- MAIN SECTION -->
 	<section id=main-sect>
 		<h1> Sacred Moneky Forest - Bali </h1>
@@ -335,6 +337,7 @@
 			<p>Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary.<br></p>
 			<p>The Monkey Forest Ubud has 186 species of plants and trees in 12,5 hectares of forest. The Monkey Forest Ubud has 3 temples, namely Dalem Agung Padangtegal Temple, Holy Spring Temple and Prajapati Temple. </p>
 		</article>
+		<!-- photo roulette -->
 		<section id="media" class="col-s-12 col-t-11 col-9">
 			<h3 class="col-s-12">Media content</h3>
 			<article id="images">
@@ -362,6 +365,7 @@
 		        <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt="left arrow videos"></button>
 	      	</article>
         </section>
+		<!-- comments and likes -->
         <section id="bottom-sect" class="col-s-12">
         	<h3>Comment section</h3>
         	<div id="likes-coms" class="col-s-11">
@@ -378,7 +382,9 @@
         	<button id="see-comments" class="col-s-6 col-t-4 col-3">See comments</button>
         </section>
 	</section>
-	<!-- FOOTER- -->
+	<!-- END MAIN FOOTER -->
+
+	<!-- FOOTER -->
 	<footer class="clearfix">
 		<div id='footer-main' class='col-t-8 col-s-12 col-3'>
 			<img id='footer-logo' src="images/logo.png" alt="travelust logo">
